<resources>
    <string name="app_name">NumberOn</string>

    <string name="eir"> </string>

    <!--splash画面-->
    <string name="touch_title">Start to Game</string>

    <!--selectMode画面-->
    <string name="cpu_btn"><font size="20">CPU対戦</font></string>
    <string name="local_btn"><font size="20">ローカル対戦</font></string>
    <string name="online_btn"><font size="20">オンライン対戦</font></string>
    <string name="rule_btn"><font size="20">ルール説明</font></string>

    <!--桁選択のダイアログ用-->
    <string name="digit_dialog_title">桁数を選択してください</string>
    <string name="digit_dialog_two">2桁</string>
    <string name="digit_dialog_three">3桁</string>
    <string name="digit_dialog_four">4桁</string>
    <string name="digit_dialog_five">5桁</string>
    <string name="digit_dialog_cancel">cancel</string>
    <string name="digit_dialog_ok">ok</string>

    <!--先行、後攻決め用-->
    <string name="order_title_cpu">CPU対戦</string>
    <string name="order_title_local">ローカル対戦</string>
    <string name="order_title_online">オンライン対戦</string>
    <string name="explain_text">先攻、後攻を決めてください</string>
    <string name="card_select">好きなカード一枚選んでください</string>
    <string name="select_player1">Player1は好きなカードを一枚選んでください</string>
    <string name="select_player2">Player2は好きなカードを一枚選んでください</string>
    <string name="select_player">Playerは好きなカードを一枚選んでください</string>
    <string name="select_btn">決定</string>
    <string name="order_player1">Player1が先攻です</string>
    <string name="order_player2">Player2が先攻です</string>
    <string name="order_player">Playerが先攻です</string>
    <string name="order_cpu">CPUが先行です</string>
    <string name="game_start">タッチでゲームスタート</string>

    <!--対戦画面用-->
    <string name="first">先攻</string>
    <string name="second">後攻</string>
    <string name="cell_call">Call</string>
    <string name="cell_H_B">Hit&amp;Blow</string>
    <string name="player1_select">Player1は設定するNumberを選んでください</string>
    <string name="player2_select">Player2は設定するNumberを選んでください</string>
    <string name="player_select">Playerは設定するNumberを選んでください</string>
    <string name="cpu_select">CPUは設定するNumberを選んでください</string>
    <string name="player1_turn">Player1はNumberを選んでください</string>
    <string name="player2_turn">Player2はNumberを選んでください</string>
    <string name="player_turn">PlayerはNumberを選んでください</string>
    <string name="cpu_turn">CPUはNumberを選んでください</string>
    <string name="player_change">プレイヤーを交代してください</string>
    <string name="change_and_tap">Change and Tap</string>
    <string name="hit_blow">%1$dH &amp; %2$dB</string>
    <string name="match_result">%1$sの勝利です</string>
</resources>
